--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: remark-lint-report
-          path: lint-result.txt
+          path: .github
